--- a/碳循环过程.md
+++ b/碳循环过程.md
@@ -1,8 +1,9 @@
-***古菌的碳循环过程（以腾冲热泉为例）*** \n
-#####################
-Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs sheds light on interconnected biogeochemical processes
-该文章发表在"Nature Communications"
-#####################
+**古菌的碳循环过程（以腾冲热泉为例）**  
+
+#####################  
+Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs sheds light on interconnected biogeochemical processes  
+该文章发表在"Nature Communications"  
+#####################  
 #一、腾冲热泉
 ##1.1 腾冲热泉中的碳循环
 途径：
