--- a/碳循环过程.md
+++ b/碳循环过程.md
@@ -8,7 +8,7 @@ Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs she
 ##1.1 腾冲热泉中的碳循环  
 途径：  
 在中性泉中，Wood-Ljungdahl途径（又称乙酰辅酶A途径，是一种二氧化碳固定途径）占主导地位，其中B26-1是贡献最大的古菌。  
-   该途径分为甲基分支和碳酰分支两个分支。  
+   \t该途径分为甲基分支和碳酰分支两个分支。  
       在甲基分支中，CO2首先被还原成甲酸，然后经一系列反应转化为甲基自由基，其与四氢蝶呤辅酶结合。  
       在碳酰分支，CO2被还原为CO，其可以与镍铁硫蛋白结合，并在二氧化碳脱氢酶/乙酰辅酶A合成酶复合体（CODH/ACS）中与甲基分支的产物合成乙酰辅酶A。  
 在小型古细菌（例如 Pacearchaeales 和 Woesearchaeales）、Asgardarchaeota 和 Thermoproteota中发现了另一种产乙酸途径，即磷酸乙酰转移酶 (pta)-乙酸激酶 (ack) 途径（被认为是细菌特异性途径，在古菌中分布广泛）。  
