--- a/异化硫酸盐还原.md
+++ b/异化硫酸盐还原.md
@@ -3,10 +3,9 @@
 #参考文章：10.1038/s41467-024-48498-5  
 ##1.背景介绍  
 <pre>
-    目前，在高温陆地热泉生态系统中对DSR的测量相对较少。在酸性热泉中，DSR可能由古细菌ARK-15介导的。此外，dsrAB和aprAB在一些Thermoproteales门中高表达。在中性或碱性泉中，可能还存在着不同的硫酸盐还原古菌。
+    目前，在高温陆地热泉生态系统中对DSR的测量相对较少。在酸性热泉中，DSR可能由古菌ARK-15介导的。此外，dsrAB和aprAB在一些Thermoproteales门中高表达，但最丰富的ARK-15古菌中缺少aprAB基因。在中性或碱性泉中，可能还存在着不同的硫酸盐还原古菌。
 
   关键基因：
       硫酸腺苷酸转移酶（sat）、异化亚硫酸盐还原酶（dsrAB）、腺苷酸硫酸盐还原酶（aprAB）
-
-
-<\pre>
+    
+ </pre>
