--- a/BiosphereCycle/异化硫酸盐还原.md
+++ b/BiosphereCycle/异化硫酸盐还原.md
@@ -12,6 +12,12 @@
 
  ##2.硫循环
 <pre>
-    硫化物（来自泉水或DSR）————>
+途径：
+    硫化物（来自泉水或DSR）经醌氧化还原酶（sqr）氧化为零价硫（关键中间体）。
+
+物种来源：
+    酸性泉(acidic springs)中，ARK-15和Thermoplasmatales 目的rMAG
+    碱性泉(alkaline springs)中，Thermoproteales 目中的rMAG
+    中性泉中的古菌
 
 </pre>
