--- a/BiosphereCycle/异化硫酸盐还原.md
+++ b/BiosphereCycle/异化硫酸盐还原.md
@@ -6,7 +6,7 @@
     目前，在高温陆地热泉生态系统中对DSR的测量相对较少。
     在酸性热泉中，DSR可能由古菌ARK-15介导的。此外，dsrAB和aprAB在一些Thermoproteales门中高表达，但最丰富的ARK-15古菌中缺少aprAB基因。硫化氢被古菌氧化为硫酸盐，然后其产物被DSR利用。
     在碱性泉中，古菌可以氧化还原硫，然后利用硫代硫酸盐、硫酸盐和亚硫酸盐等各种硫化合物进行DSR和形成零价硫。
-    在中性泉中，可能还存在着不同的硫酸盐还原古菌。其中存在的古菌包括同化硫酸盐还原所需的全套基因以及硫二氧合酶（sdo）的存在————这证明了中性泉中存在化能自养硫氧化作用。
+    在中性泉中，可能还存在着不同的硫酸盐还原古菌。其中存在古菌包括同化硫酸盐还原所需的全套基因以及硫二氧合酶（sdo）的存在————这证明了中性泉中存在化能自养硫氧化作用。
 
   关键基因：
       硫酸腺苷酸转移酶（sat）、异化亚硫酸盐还原酶（dsrAB）、腺苷酸硫酸盐还原酶（aprAB）
