--- a/BiosphereCycle/碳循环过程.md
+++ b/BiosphereCycle/碳循环过程.md
@@ -15,7 +15,7 @@ Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs she
       在碳酰分支，CO2被还原为CO，其可以与镍铁硫蛋白结合，并在二氧化碳脱氢酶/乙酰辅酶A合成酶复合体（CODH/ACS）中与甲基分支的产物合成乙酰辅酶A。  
 在小型古细菌（例如 Pacearchaeales 和 Woesearchaeales）、Asgardarchaeota 和 Thermoproteota中发现了另一种产乙酸途径，即磷酸乙酰转移酶 (pta)-乙酸激酶 (ack) 途径（被认为是细菌特异性途径，在古菌中分布广泛）。  
 
-碳源：乙酸盐—————含氧和缺氧环境中普遍存在的电子供体和碳源，部分乙酸盐如部分氧化的硫化合物可能与其他元素循环有关。  
+碳源：醋酸盐—————含氧和缺氧环境中普遍存在的电子供体和碳源，部分醋酸盐如部分氧化的硫化合物可能与其他元素循环有关。  
  </pre>
 
 ![Alt text](https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-024-48498-5/MediaObjects/41467_2024_48498_Fig3_HTML.png?)  
