--- a/BiosphereCycle/碳循环过程.md
+++ b/BiosphereCycle/碳循环过程.md
@@ -20,3 +20,13 @@ Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs she
 
 ![Alt text](https://media.springernature.com/lw685/springer-static/image/art%3A10.1038%2Fs41467-024-48498-5/MediaObjects/41467_2024_48498_Fig3_HTML.png?)  
 
+
+# **几种碳固定途径（与地理环境和温度有关）**
+
+还原性三羧酸循环（rTCA）：20-90℃环境中处于主要地位，高效但对氧气敏感（适应低氧环境），通过替换三个关键酶反向运行TCA循环。
+
+三羧酸循环（TCA）：
+
+卡尔文-本森-巴沙姆循环（Calvin–Benson–Bassham cycle）：温度低于20℃时处于主导地位，该循环耗能较多但耐氧。
+
+伍德-吕恩达尔途径（Wood–Ljungdahl pathway）和二羧酸-4-羟基丁酸途径（dicarboxylate–4-hydroxybutyrate pathway）：大于90℃时的途径，大多数为产甲烷或进行硫酸盐循环的超嗜热古菌。
