--- a/BiosphereCycle/碳循环过程.md
+++ b/BiosphereCycle/碳循环过程.md
@@ -1,11 +1,11 @@
 # **古菌的碳循环过程（以腾冲热泉为例）**  
 
-#####################  
+
 Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs sheds light on interconnected biogeochemical processes  
 该文章发表在"Nature Communications"  
-#####################  
-#一、腾冲热泉  
-##1.1 腾冲热泉中的碳循环  
+
+# 一、腾冲热泉  
+## 1.1 腾冲热泉中的碳循环  
  <pre>
 途径：  
 在中性泉中，Wood-Ljungdahl途径（又称乙酰辅酶A途径，是一种二氧化碳固定途径）占主导地位，其中B26-1是贡献最大的古菌。  
@@ -23,10 +23,7 @@ Analysis of nearly 3000 archaeal genomes from terrestrial geothermal springs she
 
 # **几种碳固定途径（与地理环境和温度有关）**
 
-还原性三羧酸循环（rTCA）：20-90℃环境中处于主要地位，高效但对氧气敏感（适应低氧环境），通过替换三个关键酶反向运行TCA循环。
-
-三羧酸循环（TCA）：
-
-卡尔文-本森-巴沙姆循环（Calvin–Benson–Bassham cycle）：温度低于20℃时处于主导地位，该循环耗能较多但耐氧。
-
-伍德-吕恩达尔途径（Wood–Ljungdahl pathway）和二羧酸-4-羟基丁酸途径（dicarboxylate–4-hydroxybutyrate pathway）：大于90℃时的途径，大多数为产甲烷或进行硫酸盐循环的超嗜热古菌。
+**还原性三羧酸循环（rTCA）**：20-90℃环境中处于主要地位，高效但对氧气敏感（适应低氧环境），通过替换三个关键酶反向运行TCA循环。
+**三羧酸循环（TCA）**：
+**卡尔文-本森-巴沙姆循环（Calvin–Benson–Bassham cycle）**：温度低于20℃时处于主导地位，该循环耗能较多但耐氧。
+**伍德-吕恩达尔途径(Wood–Ljungdahl pathway)** 和 **二羧酸-4-羟基丁酸途径（dicarboxylate–4-hydroxybutyrate pathway）**：大于90℃时的途径，大多数为产甲烷或进行硫酸盐循环的超嗜热古菌。
