--- a/Tools/服务器相关知识.md
+++ b/Tools/服务器相关知识.md
@@ -3,4 +3,5 @@
 #2.其次，在miniconda3/bin目录下搜索下列命令，全部修改  
 grep -rI "/data01nfs/user/qinfsh" .  
 sed -i 's|/data01nfs/user/qinfsh|/datanode02/qinfsh|g' ./*  
-#3.修改miniconda3/etc/profile.d下的conda.sh等文件地址  
+#3.修改miniconda3/etc/profile.d下的conda.sh等文件地址   
+#4.最后，使用source .bashrc  
