--- a/Tools/服务器相关知识.md
+++ b/Tools/服务器相关知识.md
@@ -5,5 +5,7 @@
     ###3.修改miniconda3/etc/profile.d下的conda.sh等文件地址   
     ###4.最后，使用source .bashrc  
 具体操作可参考：
-![](https://github.com/qinfsh/NOTES/photos/数据迁移conda修复1.png)
-![](https://github.com/qinfsh/NOTES/photos/数据迁移conda修复2.png)
+<picture>
+<img alt="" src="https://github.com/qinfsh/NOTES/photos/数据迁移conda修复1.png">
+<img alt="" src="https://github.com/qinfsh/NOTES/photos/数据迁移conda修复2.png">
+</picture>
