--- a/Tools/服务器相关知识.md
+++ b/Tools/服务器相关知识.md
@@ -6,6 +6,6 @@
     ###4.最后，使用source .bashrc  
 具体操作可参考：
 <picture>
-<img alt="" src="https://github.com/qinfsh/NOTES/photos/数据迁移conda修复1.png">
-<img alt="" src="https://github.com/qinfsh/NOTES/photos/数据迁移conda修复2.png">
+<img alt="" src="https:/github.com/qinfsh/NOTES/photos/数据迁移conda修复1.png">
+<img alt="" src="https:/github.com/qinfsh/NOTES/photos/数据迁移conda修复2.png">
 </picture>
